--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-# .env is better suited for public variables, ie, variables that should not commited
-# For secret variables is better to use DevServerControl tool with set_env_variable: ["KEY", "SECRET"]
+# .env.example
+# Copy this file to .env and update with your actual values
+# For secret variables, consider using DevServerControl tool with set_env_variable: ["KEY", "SECRET"]
 
 # ============================================================
 # Builder.io Configuration
@@ -18,10 +19,8 @@ PING_MESSAGE="ping pong"
 # Base domain for all Azure APIM services
 VITE_AZURE_APIM_BASE_URL=https://ndoms-dev-apim.azure-api.net
 
-VITE_PIM_IMAGE_BASE_URL=https://ndomsdevstorageacc.blob.core.windows.net
-
-# API subscription key for Azure APIM
-VITE_AZURE_APIM_SUBSCRIPTION_KEY=5881e307d1704219ae2e3759e6c5f1f0
+# API subscription key for Azure APIM (replace with your actual key)
+VITE_AZURE_APIM_SUBSCRIPTION_KEY=your-subscription-key-here
 
 # ============================================================
 # External API Endpoints
@@ -43,4 +42,6 @@ VITE_API_BASE_URL=/api
 # ============================================================
 # Authentication Configuration
 # ============================================================
-# Keycloak entries removed — no external auth integrated
+# Add authentication variables here if needed
+# Example:
+# VITE_AUTH_PROVIDER=local
