quick add panel changes

--- a/.env
+++ b/.env
@@ -43,4 +43,10 @@ VITE_API_BASE_URL=/api
 # ============================================================
 # Authentication Configuration
 # ============================================================
-# Keycloak entries removed — no external auth integrated
+# Keycloak Authentication
+VITE_KEYCLOAK_URL=https://ndoms-keycloak-dev-dns.centralindia.azurecontainer.io
+VITE_KEYCLOAK_REALM=ndoms
+VITE_KEYCLOAK_CLIENT_ID=frontend-react
+
+# User Management API
+VITE_USER_MANAGEMENT_API_PATH=/user-management/dev/api/v1
